{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 196,
  "lineage": "b1638718-47fb-9f28-a95a-9926ea2f64ab",
  "resources": [
    {
      "module": "module.Eks_Cluster_Module",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_traffic_node_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690169311736:security-group-rule/sgr-0ffe1f14f089b3f33",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ffe1f14f089b3f33",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-01be5a8d57a1170e9",
            "security_group_rule_id": "sgr-0ffe1f14f089b3f33",
            "tags": null,
            "tags_all": {
              "Environment": "Production",
              "Owner": "DevOps-Team",
              "Project": "ITI-E-Commerce",
              "Terraform": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.Eks_Cluster_Module.aws_eks_cluster.eks_cluster",
            "module.Eks_Cluster_Module.aws_iam_role.eks-iam-role",
            "module.Eks_Cluster_Module.aws_iam_role_policy_attachment.AmazonEC2ContainerRegistryReadOnly-EKS",
            "module.Eks_Cluster_Module.aws_iam_role_policy_attachment.AmazonEKSClusterPolicy",
            "module.Network_Module.aws_subnet.Public_Subnet1",
            "module.Network_Module.aws_subnet.Public_Subnet2",
            "module.Network_Module.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Jenkin_EC2_Module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins_Ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f46add8cabfa1f68",
            "arn": "arn:aws:ec2:us-east-1:690169311736:instance/i-0155c755e82e602e0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins-ec2-instance-profile",
            "id": "i-0155c755e82e602e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ec115e4c80b887af",
            "private_dns": "ip-10-0-0-170.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.170",
            "public_ip": "3.95.138.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "Production",
                  "Owner": "DevOps-Team",
                  "Project": "ITI-E-Commerce",
                  "Terraform": "true"
                },
                "tags_all": {
                  "Environment": "Production",
                  "Owner": "DevOps-Team",
                  "Project": "ITI-E-Commerce",
                  "Terraform": "true"
                },
                "throughput": 125,
                "volume_id": "vol-05798aeeabdcbb59a",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f9337e3682ecd744",
            "tags": {
              "Name": "Jenkins_instance"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "Jenkins_instance",
              "Owner": "DevOps-Team",
              "Project": "ITI-E-Commerce",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08b288f2dfd49925b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Jenkin_EC2_Module.aws_iam_instance_profile.jenkins_ec2_instance_profile",
            "module.Jenkin_EC2_Module.aws_iam_role.jenkins_ec2_role",
            "module.Jenkin_EC2_Module.aws_key_pair.my_key_pair",
            "module.Jenkin_EC2_Module.data.aws_ami.Amazon_Linux_2023",
            "module.Jenkin_EC2_Module.local_file.public_key",
            "module.Jenkin_EC2_Module.tls_private_key.my_key",
            "module.Network_Module.aws_security_group.Public_Security_Group",
            "module.Network_Module.aws_subnet.Public_Subnet1",
            "module.Network_Module.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network_Module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0daea721e77b3eba1",
            "arn": "arn:aws:ec2:us-east-1:690169311736:elastic-ip/eipalloc-0daea721e77b3eba1",
            "association_id": "eipassoc-06601af719a10d93d",
            "domain": "vpc",
            "id": "eipalloc-0daea721e77b3eba1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06955f7176c966fe2",
            "private_dns": "ip-10-0-0-19.ec2.internal",
            "private_ip": "10.0.0.19",
            "public_dns": "ec2-34-235-47-223.compute-1.amazonaws.com",
            "public_ip": "34.235.47.223",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Environment": "Production",
              "Owner": "DevOps-Team",
              "Project": "ITI-E-Commerce",
              "Terraform": "true"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.Network_Module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690169311736:internet-gateway/igw-07e0c240c195a5c60",
            "id": "igw-07e0c240c195a5c60",
            "owner_id": "690169311736",
            "tags": {
              "Name": "my-igw"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "my-igw",
              "Owner": "DevOps-Team",
              "Project": "ITI-E-Commerce",
              "Terraform": "true"
            },
            "vpc_id": "vpc-061cf4b0120525d35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network_Module.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network_Module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0daea721e77b3eba1",
            "association_id": "eipassoc-06601af719a10d93d",
            "connectivity_type": "public",
            "id": "nat-01a350172129e30c1",
            "network_interface_id": "eni-06955f7176c966fe2",
            "private_ip": "10.0.0.19",
            "public_ip": "34.235.47.223",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f9337e3682ecd744",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "nat-gateway",
              "Owner": "DevOps-Team",
              "Project": "ITI-E-Commerce",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network_Module.aws_eip.nat",
            "module.Network_Module.aws_subnet.Public_Subnet1",
            "module.Network_Module.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network_Module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private_Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690169311736:route-table/rtb-01f61860541049a24",
            "id": "rtb-01f61860541049a24",
            "owner_id": "690169311736",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01a350172129e30c1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private_Route_Table"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "Private_Route_Table",
              "Owner": "DevOps-Team",
              "Project": "ITI-E-Commerce",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-061cf4b0120525d35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network_Module.aws_eip.nat",
            "module.Network_Module.aws_nat_gateway.nat_gw",
            "module.Network_Module.aws_subnet.Public_Subnet1",
            "module.Network_Module.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network_Module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690169311736:route-table/rtb-085cdd367601ab363",
            "id": "rtb-085cdd367601ab363",
            "owner_id": "690169311736",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07e0c240c195a5c60",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Environment": "Production",
              "Owner": "DevOps-Team",
              "Project": "ITI-E-Commerce",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-061cf4b0120525d35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network_Module.aws_internet_gateway.gw",
            "module.Network_Module.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network_Module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcd3c42c7f5ceed0",
            "route_table_id": "rtb-085cdd367601ab363",
            "subnet_id": "subnet-0f9337e3682ecd744"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network_Module.aws_internet_gateway.gw",
            "module.Network_Module.aws_route_table.Public_Route_Table",
            "module.Network_Module.aws_subnet.Public_Subnet1",
            "module.Network_Module.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network_Module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_route_table_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2cec4e0e413539c",
            "route_table_id": "rtb-085cdd367601ab363",
            "subnet_id": "subnet-0b64f35e591166288"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network_Module.aws_internet_gateway.gw",
            "module.Network_Module.aws_route_table.Public_Route_Table",
            "module.Network_Module.aws_subnet.Public_Subnet2",
            "module.Network_Module.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network_Module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04acbb403c8214c1c",
            "route_table_id": "rtb-01f61860541049a24",
            "subnet_id": "subnet-0afaf21f56ab697c8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network_Module.aws_eip.nat",
            "module.Network_Module.aws_nat_gateway.nat_gw",
            "module.Network_Module.aws_route_table.Private_Route_Table",
            "module.Network_Module.aws_subnet.Private_Subnet1",
            "module.Network_Module.aws_subnet.Public_Subnet1",
            "module.Network_Module.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network_Module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d3f145e6798f01e",
            "route_table_id": "rtb-01f61860541049a24",
            "subnet_id": "subnet-016bf003c1c3f34d0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network_Module.aws_eip.nat",
            "module.Network_Module.aws_nat_gateway.nat_gw",
            "module.Network_Module.aws_route_table.Private_Route_Table",
            "module.Network_Module.aws_subnet.Private_Subnet2",
            "module.Network_Module.aws_subnet.Public_Subnet1",
            "module.Network_Module.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network_Module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Public_Security_Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690169311736:security-group/sg-08b288f2dfd49925b",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08b288f2dfd49925b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Public_Security_Group",
            "name_prefix": "",
            "owner_id": "690169311736",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public_Security_Group"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "Public_Security_Group",
              "Owner": "DevOps-Team",
              "Project": "ITI-E-Commerce",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-061cf4b0120525d35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network_Module.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network_Module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690169311736:subnet/subnet-0afaf21f56ab697c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0afaf21f56ab697c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690169311736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "Private Subnet",
              "Owner": "DevOps-Team",
              "Project": "ITI-E-Commerce",
              "Terraform": "true"
            },
            "vpc_id": "vpc-061cf4b0120525d35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network_Module.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network_Module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private_Subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690169311736:subnet/subnet-016bf003c1c3f34d0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016bf003c1c3f34d0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "690169311736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private Subnet2"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "Private Subnet2",
              "Owner": "DevOps-Team",
              "Project": "ITI-E-Commerce",
              "Terraform": "true"
            },
            "vpc_id": "vpc-061cf4b0120525d35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network_Module.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network_Module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690169311736:subnet/subnet-0f9337e3682ecd744",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9337e3682ecd744",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "690169311736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "Public Subnet",
              "Owner": "DevOps-Team",
              "Project": "ITI-E-Commerce",
              "Terraform": "true"
            },
            "vpc_id": "vpc-061cf4b0120525d35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network_Module.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network_Module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public_Subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690169311736:subnet/subnet-0b64f35e591166288",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b64f35e591166288",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "690169311736",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet2"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "Public Subnet2",
              "Owner": "DevOps-Team",
              "Project": "ITI-E-Commerce",
              "Terraform": "true"
            },
            "vpc_id": "vpc-061cf4b0120525d35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network_Module.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network_Module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690169311736:vpc/vpc-061cf4b0120525d35",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0de43cace463562f8",
            "default_route_table_id": "rtb-0d19336e79e85bb99",
            "default_security_group_id": "sg-0453f20bd08b7269d",
            "dhcp_options_id": "dopt-06da9d611b967264f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-061cf4b0120525d35",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d19336e79e85bb99",
            "owner_id": "690169311736",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "my-vpc",
              "Owner": "DevOps-Team",
              "Project": "ITI-E-Commerce",
              "Terraform": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.Network_Module",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690169311736:security-group-rule/sgr-0245c3711e26a754f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0245c3711e26a754f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-08b288f2dfd49925b",
            "security_group_rule_id": "sgr-0245c3711e26a754f",
            "tags": null,
            "tags_all": {
              "Environment": "Production",
              "Owner": "DevOps-Team",
              "Project": "ITI-E-Commerce",
              "Terraform": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network_Module.aws_security_group.Public_Security_Group",
            "module.Network_Module.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Network_Module",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:690169311736:security-group-rule/sgr-0739bd81ec6109de2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0739bd81ec6109de2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-08b288f2dfd49925b",
            "security_group_rule_id": "sgr-0739bd81ec6109de2",
            "tags": null,
            "tags_all": {
              "Environment": "Production",
              "Owner": "DevOps-Team",
              "Project": "ITI-E-Commerce",
              "Terraform": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.Network_Module.aws_security_group.Public_Security_Group",
            "module.Network_Module.aws_vpc.my-vpc"
          ]
        }
      ]
    }
  ]
}